# chat3037

./: Cargo.toml  README.md  package.json  vite.config.ts
src/: App.css  App.tsx  Classes.ts  addr.rs  main.rs  words.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf2.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/appstate/: addr.rs  context.rs  mod.rs  session.rs
src-tauri/src/data/: mod.rs
src-tauri/src/helpers/: events.rs  message.rs  mod.rs  network.rs  packet.rs  shared_tools.rs
src-tauri/src/network/: mod.rs  stream.rs  tauri.rs
src-tauri/src/threads/: mod.rs
src/components/: Body.css  Body.tsx  Chatbox.css  Chatbox.tsx  ConnectBar.tsx  Header.tsx  MsgRequest.css  MsgRequest.tsx
