[package]
name = "chat3037"
version = "0.1.0"
edition = "2021"

[dependencies]
clap_derive = "4.5.18"
clap = { version = "4.5.20", features = ["derive"]}

rand = "0.8.5"

stun-client = "0.1.4"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.93"

random_word = "0.4.3"